grammar.js
    source_file: $ => seq(
      optional('unit'), _statement_list($),
    ),

    line_comment: $ => token(seq(
      '%', /.*/
    )),

    _statement_line: $ => choice(
      $._statement,
      ';'
    ),

    constvar_declaration: $ => seq(
      choice('const', 'var'),
      optional($.pervasive_attr),
      optional($.register_attr),
      $._name_list,
      optional(seq(
        ':', field('type_spec', $._type)
      )),
      optional(seq(
        ':=', field('initializer', $._expression),
      )),
    ),

    type_declaration: $ => seq(
      'type',
      optional($.pervasive_attr),
      field('name', $._type_identifier),
      ':',
      field('type_spec', choice($._type, $.forward_type)),
    ),

    bind_declaration: $ => seq(
      'bind',
      sepBy1(',', $.bind_item),
      // can't have an optional comma here, since that conflicts with
      // constvar_declaration and is ambiguous with the bind item list
    ),

    bind_item: $ => seq(
      optional($.var_attr),
      optional($.register_attr),
      field('name', $.identifier),
      'to',
      $._expression
    ),

    function_declaration: $ => seq(
      $._function_header,
      _statement_list($),
      end_named_tail($),
    ),

    _function_header: $ => prec.right(seq(
      choice('function', 'fcn'),
      optional($.pervasive_attr),
      field('name', $.identifier),
      optional(field('params', $.param_spec)),
      optional(field('result_name', $.identifier)),
      ':',
      field('result_type', $._type),
    )),

    procedure_declaration: $ => seq(
      $._procedure_header,
      _statement_list($),
      end_named_tail($),
    ),

    _procedure_header: $ => prec.right(seq(
      choice('procedure', 'proc'),
      optional($.pervasive_attr),
      field('name', $.identifier),
      optional(field('params', $.param_spec)),
      optional(seq(':', field('device_spec', $._expression))),
    )),

    _subprogram_header: $ => choice($._function_header, $._procedure_header),

    process_declaration: $ => seq(
      $._process_header,
      _statement_list($),
      end_named_tail($),
    ),

    _process_header: $ => prec.right(seq(
      'process',
      optional($.pervasive_attr),
      field('name', $.identifier),
      optional(field('params', $.param_spec)),
      optional(seq(':', field('stack_size', $._expression))),
    )),

    param_spec: $ => seq(
      '(',
      sepBy(',', $._param_declaration),
      optional(','),
      ')',
    ),

    _param_declaration: $ => choice(
      $.constvar_param,
      $._subprogram_param,
    ),

    constvar_param: $ => seq(
      optional(field('by_ref', $.var_attr)),
      optional(field('bind_to_register', $.register_attr)),
      sepBy1(',', field('name', $.identifier)), optional(','),
      ':', optional(field('coerce_type', $.cheat_attr)), field('param_type', $._type),
    ),

    external_declaration: $ => seq(
      'external',
      optional(field('external_spec', $._expression)),
      choice(
        $._external_var,
        $._subprogram_header,
      )
    ),

    _external_var: $ => seq(
      'var',
      field('name', $.identifier),
      optional(seq(':', field('type_spec', $._type))),
      optional(seq(':=', field('initializer', $._expression))),
    ),

    forward_declaration: $ => prec.right(seq(
      'forward',
      $._subprogram_header,
      optional(seq('import', $._import_list)),
    )),

    deferred_declaration: $ => seq('deferred', $._subprogram_header),

    body_declaration: $ => seq(
      'body', $._body_header,
      _statement_list($),
      end_named_tail($),
    ),

    _body_header: $ => choice($._plain_header, $._function_header, $._procedure_header),

    module_declaration: $ => seq(
      'module',
      optional($.pervasive_attr),
      field('name', $._type_identifier),
      _statement_list($),
      end_named_tail($),
    ),

    class_declaration: $ => seq(
      optional('monitor'), 'class',
      optional($.pervasive_attr),
      field('name', $._type_identifier),
      optional(seq(':', field('device_spec', $._expression))),
      _statement_list($),
      end_named_tail($),
    ),

    monitor_declaration: $ => seq(
      'monitor',
      optional($.pervasive_attr),
      field('name', $._type_identifier),
      optional(seq(':', field('device_spec', $._expression))),
      _statement_list($),
      end_named_tail($),
    ),

    assign_statement: $ => prec.right(PREC.assign, seq(
      field('left', $._expression),
      ':=',
      field('right', $._expression),
    )),

    compound_assign_statement: $ => {
      const infix_ops = [
        '=>',
        'or', '|',
        'and', '&',
        '+', '-', 'xor',
        '*', '/', 'div', 'mod', 'rem', 'shl', 'shr',
        '**'
      ];

      return choice(
        ...infix_ops.map((operator) => prec.left(PREC.assign, seq(
          field('left', $._expression),
          field('operator', seq(operator, '=')),
          field('right', $._expression),
        ))),
      )
    },

    open_statement: $ => seq(
      'open', $._open_variants
    ),

    _open_variants: $ => choice($._old_open, $._new_open),

    io_capability: $ => choice(
      'get', 'put',
      'read', 'write',
      'seek', 'mod',
    ),

    close_statement: $ => seq(
      'close', $._close_variants,
    ),

    _close_variants: $ => choice($._old_close, $._new_close),

    put_statement: $ => seq(
      'put',
      optional(seq($._stream_handle, ',')),
      sepBy1(',', $._skippable_put),
      optional('..'),
    ),

    _skippable_put: $ => choice($.put_item, $.skip_item),

    put_item: $ => seq(
      $._expression,
      optional_chain(
        ':',
        field('width', $._expression),
        field('fraction', $._expression),
        field('exponent_width', $._expression),
      ),
    ),

    get_statement: $ => seq(
      'get',
      optional(seq($._stream_handle, ',')),
      sepBy1(',', $._skippable_get),
    ),

    _skippable_get: $ => choice($.get_item, $.skip_item),

    get_item: $ => seq(
      $._expression,
      optional(seq(':', choice(
        field('width', $._expression),
        $.star_width,
      )))
    ),

    read_statement: $ => seq('read', $._binary_io),
    write_statement: $ => seq('write', $._binary_io),

    _binary_io: $ => seq(
      $._stream_handle,
      optional(seq(':', field('status', $._expression))),
      ',',
      sepBy1(',', $.binary_item),
    ),

    binary_item: $ => seq(
      $._expression,
      optional_chain(
        ':',
        field('request_size', $._expression),
        field('actual_size', $._expression),
      ),
    ),

    seek_statement: $ => seq(
      'seek',
      $._stream_handle, ',',
      choice(
        field('seek_to', $._expression),
        $.star_width,
      ),
    ),

    tell_statement: $ => seq(
      'tell',
      $._stream_handle, ',',
      field('tell_to', $._expression),
    ),

    skip_item: $ => 'skip',
    star_width: $ => '*',
    _stream_handle: $ => seq(':', field('stream', $._expression)),

    for_statement: $ => seq(
      'for',
      optional('decreasing'), optional(field('name', $.identifier)), ':',
      field('bounds',
        choice(
          $._expression,
          $.range_expression,
        ),
      ),
      field('step_by', optional(seq(
        'by', $._expression
      ))),
      _statement_list($),
      end_keyword_tail('for')
    ),

    loop_statement: $ => seq(
      'loop',
      _statement_list($),
      end_keyword_tail('loop')
    ),

    exit_statement: $ => seq(
      'exit',
      optional(seq('when', field('condition', $._expression)))
    ),

    if_statement: $ => seq(
      'if', field('condition', $._expression), 'then', _statement_list($),
      repeat($.elsif_clause),
      optional($.else_clause),
      end_keyword_tail('if')
    ),

    elsif_clause: $ => seq(
      choice('elsif', 'elseif', 'elif'), field('condition', $._expression), 'then', _statement_list($),
    ),

    else_clause: $ => seq(
      'else', _statement_list($),
    ),

    case_statement: $ => seq(
      'case', field('condition', $._expression), 'of',
      repeat($.case_arm),
      end_keyword_tail('case')
    ),

    case_arm: $ => seq(
      'label', field('pattern', sepBy(',', $._expression)), ':',
      _statement_list($),
    ),

    block_statement: $ => seq(
      'begin',
      _statement_list($),
      'end'
    ),

    invariant_statement: $ => seq(
      'invariant', field('condition', $._expression)
    ),

    assert_statement: $ => seq(
      'assert', field('condition', $._expression)
    ),

    call_statement: $ => choice(
      $.call_expression,
      seq(
        field('left', choice($.nameref_expression, $.field_expression)),
        optional($._argument_list)
      ),
    ),

    return_statement: $ => 'return',

    result_statement: $ => seq('result', field('value', $._expression)),

    checkedness_statement: $ => $._checkedness,

    inherit_statement: $ => seq('inherit', $.external_item),

    implement_statement: $ => seq('implement', $.external_item),

    implement_by_statement: $ => seq('implement', 'by', $.external_item),

    import_statement: $ => seq(
      'import',
      choice(
        $._import_list,
        seq('(', sepBy(',', $.import_item), optional(','), ')'),
      ),
    ),

    _import_list: $ => sepBy1(',', $.import_item),

    import_item: $ => seq(
      repeat(choice($.var_attr, $.const_attr, $.forward_attr)),
      $.external_item,
    ),

    external_item: $ => choice(
      field('path', $.string_literal),
      seq(
        field('name', $.identifier),
        optional(seq('in', field('path', $.string_literal))),
      )
    ),

    _expression: $ => choice(
      $.literal_expression,
      $.objclass_expression,
      $.init_expression,
      $.nil_expression,
      $.sizeof_expression,
      $.binary_expression,
      $.unary_expression,
      $.paren_expression,

      $.self_expression,
      $.nameref_expression,
      $.field_expression,
      $.deref_expression,
      $.cheat_expression,
      $.nat_cheat_expression,
      $.arrow_expression,
      $.indirect_expression,
      $.bits_expression,
      $.call_expression,
    ),

    literal_expression: $ => choice(
      $.string_literal,
      $.char_literal,
      $.boolean_literal,
      $.integer_literal,
      $.real_literal,
    ),

    string_literal: $ => seq(
      '"',
      repeat(
        choice(
          $.escape_sequence,
          $.string_content,
        )
      ),
      token.immediate('"'),
    ),

    char_literal: $ => seq(
      '\'',
      repeat(
        choice(
          $.escape_sequence,
          $.char_content,
        )
      ),
      token.immediate('\''),
    ),

    boolean_literal: $ => choice('true', 'false'),

    integer_literal: $ => token(seq(
      choice(
        /[0-9]+/,
        /[0-9]+#[a-zA-Z0-9]+/,
      )
      // ???: specifying sizes:
      // could be like `123!i4`, composes well with # and stuff
      // and '!' is unused in the syntax right now
    )),

    nameref_expression: $ => $.path_component,

    binary_expression: $ => {
      /** @type {[number, string | ChoiceRule][]} */
      const left_assoc = [
        [PREC.imply, '=>'],
        [PREC.or, choice('or', '|')],
        [PREC.and, choice('and', '&')],
        [PREC.compare, choice(
          '<', '>', '<=', '>=', '=',
          seq('~', '='), seq('not', '='),
          seq('~', 'in'), seq('not', 'in')
        )],
        [PREC.add, choice('+', '-', 'xor')],
        [PREC.multiply, choice('*', '/', 'div', 'mod', 'rem', 'shl', 'shr')],
      ];

      // In toco, exponentiation is right-associative,
      // while in Turing, it's left-associative.
      //
      // Since we're targeting toco anyways, we're keeping
      // it right associative.
      /** @type {[number, string | ChoiceRule][]} */
      const right_assoc = [
        [PREC.exp, '**']
      ];

      return choice(
        ...left_assoc.map(([precedence, operator]) => prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression),
        ))),
        ...right_assoc.map(([precedence, operator]) => prec.right(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression),
        )))
      );
    },

    paren_expression: $ => seq('(', $._expression, ')'),

    field_expression: $ => prec.left(PREC.field, seq(
      field('left', $._expression),
      field('operator', '.'),
      field('field', $.path_component)
    )),

    deref_expression: $ => prec.left(PREC.deref, seq(
      field('operator', '^'),
      field('right', $._expression),
    )),

    range_expression: $ => prec.left(PREC.range, seq(
      field('start', $._expression),
      '..',
      field('end', $._expression)
    )),

    call_expression: $ => prec.left(PREC.call, seq(
      field('left', $._expression), $._argument_list
    )),

    _argument_list: $ => seq('(', sepBy(',', $._call_argument), optional(','), ')'),

    _type: $ => choice(
      $.primitive_type,
      $.nameref_type,
      $.range_type,
      $.enum_type,
      $.array_type,
      $.set_type,
      $.record_type,
      $.union_type,
      $.pointer_type,
      $.function_type,
      $.procedure_type,
      $.collection_type,
      $.condition_type,
    ),

    primitive_type: $ => prec.right(choice(
      'boolean',
      'addressint',
      'int',
      'int1',
      'int2',
      'int4',
      'nat',
      'nat1',
      'nat2',
      'nat4',
      'real',
      'real4',
      'real8',
      seq('char', optional($.charseq_size)),
      seq('string', optional($.charseq_size)),
    )),

    _checkedness: $ => choice($.checked_attr, $.unchecked_attr),

    function_type: $ => prec.right(seq(
      choice('function', 'fcn'),
      optional(field('name', $.identifier)),
      optional(field('params', $.param_spec)),
      ':',
      field('result_type', $._type),
    )),

    procedure_type: $ => prec.right(seq(
      choice('procedure', 'proc'),
      optional(field('name', $.identifier)),
      optional(field('params', $.param_spec)),
    )),

    forward_type: $ => 'forward',

    // Attrs //
    checked_attr: $ => 'checked',

    unchecked_attr: $ => 'unchecked',

    pervasive_attr: $ => choice('pervasive', '*'),

    register_attr: $ => 'register',

    const_attr: $ => 'const',

    var_attr: $ => 'var',

    cheat_attr: $ => prec.left('cheat'),

    forward_attr: $ => 'forward',

    identifier: $ => /[a-zA-Z_][a-zA-Z_0-9]*/,

    _type_identifier: $ => alias($.identifier, $.type_identifier),
    _name_list: $ => sepBy1(',', field('name', $.identifier)),
