test/corpus/statements.txt
================================================================================
statements - surrounded by semis
================================================================================

;;;;;;;;;;;;;
const a := 2;
type q : int;
;;;;;;;;;;;;;

--------------------------------------------------------------------------------

(source_file
  (constvar_declaration
    (identifier)
    (literal_expression
      (integer_literal)))
  (type_declaration
    (type_identifier)
    (primitive_type)))

================================================================================
statements - with semis
================================================================================

const a := 2;
type q : int;

--------------------------------------------------------------------------------

(source_file
  (constvar_declaration
    (identifier)
    (literal_expression
      (integer_literal)))
  (type_declaration
    (type_identifier)
    (primitive_type)))

================================================================================
constvar declaration - full
================================================================================

const a : boolean := b
var a : boolean := b

--------------------------------------------------------------------------------

(source_file
  (constvar_declaration
    name: (identifier)
    type_spec: (primitive_type)
    initializer: (nameref_expression
      (path_component
        (identifier))))
  (constvar_declaration
    name: (identifier)
    type_spec: (primitive_type)
    initializer: (nameref_expression
      (path_component
        (identifier)))))

================================================================================
constvar declaration - type only
================================================================================

const a : boolean
var a : boolean

--------------------------------------------------------------------------------

(source_file
  (constvar_declaration
    (identifier)
    (primitive_type))
  (constvar_declaration
    (identifier)
    (primitive_type)))

================================================================================
constvar declaration - init only
================================================================================

const a := b
var a := b

--------------------------------------------------------------------------------

(source_file
  (constvar_declaration
    (identifier)
    (nameref_expression
      (path_component
        (identifier))))
  (constvar_declaration
    (identifier)
    (nameref_expression
      (path_component
        (identifier)))))

================================================================================
constvar declaration - missing both
================================================================================

const a
var a

--------------------------------------------------------------------------------

(source_file
  (constvar_declaration
    (identifier))
  (constvar_declaration
    (identifier)))

================================================================================
constvar declaration - pervasive attr
================================================================================

const pervasive a
var pervasive a

const * a
var * a

--------------------------------------------------------------------------------

(source_file
  (constvar_declaration
    (pervasive_attr)
    (identifier))
  (constvar_declaration
    (pervasive_attr)
    (identifier))
  (constvar_declaration
    (pervasive_attr)
    (identifier))
  (constvar_declaration
    (pervasive_attr)
    (identifier)))

================================================================================
constvar declaration - register attr
================================================================================

const register a
var register a

--------------------------------------------------------------------------------

(source_file
  (constvar_declaration
    (register_attr)
    (identifier))
  (constvar_declaration
    (register_attr)
    (identifier)))

================================================================================
constvar declaration - attr ordering
================================================================================

const pervasive register a
var register pervasive a

--------------------------------------------------------------------------------

(source_file
  (constvar_declaration
    (pervasive_attr)
    (register_attr)
    (identifier))
  (constvar_declaration
    (register_attr)
    (identifier))
  (call_statement
    (nameref_expression
      (path_component
        (identifier)))))

================================================================================
constvar declaration - multiple names
================================================================================

const a, b, c, d : int

--------------------------------------------------------------------------------

(source_file
  (constvar_declaration
    name: (identifier)
    name: (identifier)
    name: (identifier)
    name: (identifier)
    type_spec: (primitive_type)))

================================================================================
constvar declaration - alt eq
================================================================================

const a = 1
var b = 2

--------------------------------------------------------------------------------

(source_file
  (constvar_declaration
    (identifier))
  (ERROR)
  (constvar_declaration
    (identifier))
  (ERROR))

================================================================================
type declaration - full
================================================================================

type a : boolean
type a : forward

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    name: (type_identifier)
    type_spec: (primitive_type))
  (type_declaration
    name: (type_identifier)
    type_spec: (forward_type)))

================================================================================
type declaration - pervasive
================================================================================

type pervasive a : boolean
type * a : boolean

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (pervasive_attr)
    (type_identifier)
    (primitive_type))
  (type_declaration
    (pervasive_attr)
    (type_identifier)
    (primitive_type)))

================================================================================
type declaration - missing colon
================================================================================

type a boolean

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (type_identifier)
    (identifier)))

================================================================================
bind declaration - single
================================================================================

bind a to 1

--------------------------------------------------------------------------------

(source_file
  (bind_declaration
    (bind_item
      (identifier)
      (literal_expression
        (integer_literal)))))

================================================================================
bind declaration - many items
================================================================================

bind a to 1, b to 2, c to 3

--------------------------------------------------------------------------------

(source_file
  (bind_declaration
    (bind_item
      (identifier)
      (literal_expression
        (integer_literal)))
    (bind_item
      (identifier)
      (literal_expression
        (integer_literal)))
    (bind_item
      (identifier)
      (literal_expression
        (integer_literal)))))

================================================================================
bind declaration - trailing comma
================================================================================

bind a to 1,
bind a to 1, b to 2, c to 3,

--------------------------------------------------------------------------------

(source_file
  (bind_declaration
    (bind_item
      (identifier)
      (literal_expression
        (integer_literal)))
    (bind_item
      (identifier)
      (ERROR
        (identifier))
      (literal_expression
        (integer_literal)))
    (bind_item
      (identifier)
      (literal_expression
        (integer_literal)))
    (bind_item
      (identifier)
      (literal_expression
        (integer_literal))))
  (ERROR))

================================================================================
bind declaration - with attrs
================================================================================

bind
  var a to 1,
  register b to 2,
  var register c to 3

--------------------------------------------------------------------------------

(source_file
  (bind_declaration
    (bind_item
      (var_attr)
      (identifier)
      (literal_expression
        (integer_literal)))
    (bind_item
      (register_attr)
      (identifier)
      (literal_expression
        (integer_literal)))
    (bind_item
      (var_attr)
      (register_attr)
      (identifier)
      (literal_expression
        (integer_literal)))))

================================================================================
bind declaration - backwards attrs
================================================================================

bind register var c to 3

--------------------------------------------------------------------------------

(source_file
  (bind_declaration
    (bind_item
      (register_attr)
      name: (identifier)
      (ERROR
        (identifier))
      (literal_expression
        (integer_literal)))))

================================================================================
bind declaration - followed by constvar
================================================================================

bind a to b
var wa : int

--------------------------------------------------------------------------------

(source_file
  (bind_declaration
    (bind_item
      (identifier)
      (nameref_expression
        (path_component
          (identifier)))))
  (constvar_declaration
    (identifier)
    (primitive_type)))

================================================================================
bind declaration - error recovery, followed by constvar
================================================================================

bind a to b,
var wa : int

var wow : int % resync

--------------------------------------------------------------------------------

(source_file
  (bind_declaration
    (bind_item
      (identifier)
      (nameref_expression
        (path_component
          (identifier)))))
  (ERROR
    (ERROR
      (var_attr)
      (identifier))
    (var_attr)
    (identifier))
  (line_comment))

================================================================================
function declaration - normal
================================================================================

function someFn() : int end someFn
fcn someFn() : int end someFn

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    params: (param_spec)
    result_type: (primitive_type)
    end_name: (identifier))
  (function_declaration
    name: (identifier)
    params: (param_spec)
    result_type: (primitive_type)
    end_name: (identifier)))

================================================================================
function declaration - pervasive attr
================================================================================

function pervasive someFn() : int end someFn
fcn * someFn() : int end someFn

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (pervasive_attr)
    name: (identifier)
    params: (param_spec)
    result_type: (primitive_type)
    end_name: (identifier))
  (function_declaration
    (pervasive_attr)
    name: (identifier)
    params: (param_spec)
    result_type: (primitive_type)
    end_name: (identifier)))

================================================================================
function declaration - with statements
================================================================================

function someFn() : int
  begin end
  result 1
end someFn

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    params: (param_spec)
    result_type: (primitive_type)
    (block_statement)
    (result_statement
      value: (literal_expression
        (integer_literal)))
    end_name: (identifier)))

================================================================================
function declaration - one constvar param with one name
================================================================================

function someFn(i : int) : int end someFn

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    params: (param_spec
      (constvar_param
        name: (identifier)
        param_type: (primitive_type)))
    result_type: (primitive_type)
    end_name: (identifier)))

================================================================================
function declaration - multiple constvar param with shared type
================================================================================

function someFn(i, j, k, l : int) : int end someFn

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    params: (param_spec
      (constvar_param
        name: (identifier)
        name: (identifier)
        name: (identifier)
        name: (identifier)
        param_type: (primitive_type)))
    result_type: (primitive_type)
    end_name: (identifier)))

================================================================================
function declaration - multiple constvar param with shared type optional comma
================================================================================

function someFn(i, j, : int) : int end someFn

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    params: (param_spec
      (constvar_param
        name: (identifier)
        name: (identifier)
        param_type: (primitive_type)))
    result_type: (primitive_type)
    end_name: (identifier)))

================================================================================
function declaration - multiple constvar param
================================================================================

function someFn(i : int, j : int, k : int) : int end someFn

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    params: (param_spec
      (constvar_param
        name: (identifier)
        param_type: (primitive_type))
      (constvar_param
        name: (identifier)
        param_type: (primitive_type))
      (constvar_param
        name: (identifier)
        param_type: (primitive_type)))
    result_type: (primitive_type)
    end_name: (identifier)))

================================================================================
function declaration - multiple constvar param with optional comma
================================================================================

function someFn(i : int, j : int, k : int,) : int end someFn

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    params: (param_spec
      (constvar_param
        name: (identifier)
        param_type: (primitive_type))
      (constvar_param
        name: (identifier)
        param_type: (primitive_type))
      (constvar_param
        name: (identifier)
        param_type: (primitive_type)))
    result_type: (primitive_type)
    end_name: (identifier)))

================================================================================
function declaration - subprogram params
================================================================================

function someFn(fcn i() : int, function : int, proc j(), proc) : int end someFn

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    params: (param_spec
      (function_type
        name: (identifier)
        params: (param_spec)
        result_type: (primitive_type))
      (function_type
        result_type: (primitive_type))
      (procedure_type
        name: (identifier)
        params: (param_spec))
      (procedure_type))
    result_type: (primitive_type)
    end_name: (identifier)))

================================================================================
function declaration - mixed params
================================================================================

function someFn(function : int, i : int, proc) : int end someFn

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    params: (param_spec
      (function_type
        result_type: (primitive_type))
      (constvar_param
        name: (identifier)
        param_type: (primitive_type))
      (procedure_type))
    result_type: (primitive_type)
    end_name: (identifier)))

================================================================================
function declaration - all constvar attrs
================================================================================

function someFn(
  i : int,
  register i : int,
  var register i : int,
  i : cheat int,
  register i : cheat int,
  var register i : cheat int,
) : int
end someFn

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    params: (param_spec
      (constvar_param
        name: (identifier)
        param_type: (primitive_type))
      (constvar_param
        bind_to_register: (register_attr)
        name: (identifier)
        param_type: (primitive_type))
      (constvar_param
        by_ref: (var_attr)
        bind_to_register: (register_attr)
        name: (identifier)
        param_type: (primitive_type))
      (constvar_param
        name: (identifier)
        coerce_type: (cheat_attr)
        param_type: (primitive_type))
      (constvar_param
        bind_to_register: (register_attr)
        name: (identifier)
        coerce_type: (cheat_attr)
        param_type: (primitive_type))
      (constvar_param
        by_ref: (var_attr)
        bind_to_register: (register_attr)
        name: (identifier)
        coerce_type: (cheat_attr)
        param_type: (primitive_type)))
    result_type: (primitive_type)
    end_name: (identifier)))

================================================================================
function declaration - with named result
================================================================================

function namedRes() toName : int end namedRes

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    params: (param_spec)
    result_name: (identifier)
    result_type: (primitive_type)
    end_name: (identifier)))

================================================================================
function declaration - no params
================================================================================

function noParams : int end noParams

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    result_type: (primitive_type)
    end_name: (identifier)))

================================================================================
procedure declaration - normal
================================================================================

procedure someProc() end someProc
proc someProc() end someProc

--------------------------------------------------------------------------------

(source_file
  (procedure_declaration
    name: (identifier)
    params: (param_spec)
    end_name: (identifier))
  (procedure_declaration
    name: (identifier)
    params: (param_spec)
    end_name: (identifier)))

================================================================================
procedure declaration - pervasive attr
================================================================================

procedure pervasive someProc() end someProc
proc * someProc() end someProc

--------------------------------------------------------------------------------

(source_file
  (procedure_declaration
    (pervasive_attr)
    name: (identifier)
    params: (param_spec)
    end_name: (identifier))
  (procedure_declaration
    (pervasive_attr)
    name: (identifier)
    params: (param_spec)
    end_name: (identifier)))

================================================================================
procedure declaration - with statements
================================================================================

procedure someProc()
  begin end
  return
end someProc

--------------------------------------------------------------------------------

(source_file
  (procedure_declaration
    name: (identifier)
    params: (param_spec)
    (block_statement)
    (return_statement)
    end_name: (identifier)))

================================================================================
procedure declaration - one constvar param with one name
================================================================================

procedure someProc(i : int) end someProc

--------------------------------------------------------------------------------

(source_file
  (procedure_declaration
    name: (identifier)
    params: (param_spec
      (constvar_param
        name: (identifier)
        param_type: (primitive_type)))
    end_name: (identifier)))

================================================================================
procedure declaration - multiple constvar param with shared type
================================================================================

procedure someProc(i, j, k, l : int) end someProc

--------------------------------------------------------------------------------

(source_file
  (procedure_declaration
    name: (identifier)
    params: (param_spec
      (constvar_param
        name: (identifier)
        name: (identifier)
        name: (identifier)
        name: (identifier)
        param_type: (primitive_type)))
    end_name: (identifier)))

================================================================================
procedure declaration - multiple constvar param with shared type optional comma
================================================================================

procedure someProc(i, j, : int) end someProc

--------------------------------------------------------------------------------

(source_file
  (procedure_declaration
    name: (identifier)
    params: (param_spec
      (constvar_param
        name: (identifier)
        name: (identifier)
        param_type: (primitive_type)))
    end_name: (identifier)))

================================================================================
procedure declaration - multiple constvar param
================================================================================

procedure someProc(i : int, j : int, k : int) end someProc

--------------------------------------------------------------------------------

(source_file
  (procedure_declaration
    name: (identifier)
    params: (param_spec
      (constvar_param
        name: (identifier)
        param_type: (primitive_type))
      (constvar_param
        name: (identifier)
        param_type: (primitive_type))
      (constvar_param
        name: (identifier)
        param_type: (primitive_type)))
    end_name: (identifier)))

================================================================================
procedure declaration - multiple constvar param with optional comma
================================================================================

procedure someProc(i : int, j : int, k : int,) end someProc

--------------------------------------------------------------------------------

(source_file
  (procedure_declaration
    name: (identifier)
    params: (param_spec
      (constvar_param
        name: (identifier)
        param_type: (primitive_type))
      (constvar_param
        name: (identifier)
        param_type: (primitive_type))
      (constvar_param
        name: (identifier)
        param_type: (primitive_type)))
    end_name: (identifier)))

================================================================================
procedure declaration - subprogram params
================================================================================

procedure someProc(fcn i() : int, function : int, proc j(), proc) end someProc

--------------------------------------------------------------------------------

(source_file
  (procedure_declaration
    name: (identifier)
    params: (param_spec
      (function_type
        name: (identifier)
        params: (param_spec)
        result_type: (primitive_type))
      (function_type
        result_type: (primitive_type))
      (procedure_type
        name: (identifier)
        params: (param_spec))
      (procedure_type))
    end_name: (identifier)))

================================================================================
procedure declaration - mixed params
================================================================================

procedure someProc(function : int, i : int, proc) end someProc

--------------------------------------------------------------------------------

(source_file
  (procedure_declaration
    name: (identifier)
    params: (param_spec
      (function_type
        result_type: (primitive_type))
      (constvar_param
        name: (identifier)
        param_type: (primitive_type))
      (procedure_type))
    end_name: (identifier)))

================================================================================
procedure declaration - all constvar attrs
================================================================================

procedure someProc(
  i : int,
  register i : int,
  var register i : int,
  i : cheat int,
  register i : cheat int,
  var register i : cheat int,
)
end someProc

--------------------------------------------------------------------------------

(source_file
  (procedure_declaration
    name: (identifier)
    params: (param_spec
      (constvar_param
        name: (identifier)
        param_type: (primitive_type))
      (constvar_param
        bind_to_register: (register_attr)
        name: (identifier)
        param_type: (primitive_type))
      (constvar_param
        by_ref: (var_attr)
        bind_to_register: (register_attr)
        name: (identifier)
        param_type: (primitive_type))
      (constvar_param
        name: (identifier)
        coerce_type: (cheat_attr)
        param_type: (primitive_type))
      (constvar_param
        bind_to_register: (register_attr)
        name: (identifier)
        coerce_type: (cheat_attr)
        param_type: (primitive_type))
      (constvar_param
        by_ref: (var_attr)
        bind_to_register: (register_attr)
        name: (identifier)
        coerce_type: (cheat_attr)
        param_type: (primitive_type)))
    end_name: (identifier)))

================================================================================
procedure declaration - with device spec
================================================================================

procedure withDevSpec() : 1 end withDevSpec

--------------------------------------------------------------------------------

(source_file
  (procedure_declaration
    name: (identifier)
    params: (param_spec)
    device_spec: (literal_expression
      (integer_literal))
    end_name: (identifier)))

================================================================================
procedure declaration - no params
================================================================================

procedure noParams end noParams

--------------------------------------------------------------------------------

(source_file
  (procedure_declaration
    name: (identifier)
    end_name: (identifier)))

================================================================================
process declaration - normal
================================================================================

process someProcess() end someProcess

--------------------------------------------------------------------------------

(source_file
  (process_declaration
    name: (identifier)
    params: (param_spec)
    end_name: (identifier)))

================================================================================
process declaration - pervasive attr
================================================================================

process pervasive someProcess() end someProcess
process * someProcess() end someProcess

--------------------------------------------------------------------------------

(source_file
  (process_declaration
    (pervasive_attr)
    name: (identifier)
    params: (param_spec)
    end_name: (identifier))
  (process_declaration
    (pervasive_attr)
    name: (identifier)
    params: (param_spec)
    end_name: (identifier)))

================================================================================
process declaration - with statements
================================================================================

process someProcess()
  begin end
  return
end someProcess

--------------------------------------------------------------------------------

(source_file
  (process_declaration
    name: (identifier)
    params: (param_spec)
    (block_statement)
    (return_statement)
    end_name: (identifier)))

================================================================================
process declaration - one constvar param with one name
================================================================================

process someProcess(i : int) end someProcess

--------------------------------------------------------------------------------

(source_file
  (process_declaration
    name: (identifier)
    params: (param_spec
      (constvar_param
        name: (identifier)
        param_type: (primitive_type)))
    end_name: (identifier)))

================================================================================
process declaration - multiple constvar param with shared type
================================================================================

process someProcess(i, j, k, l : int) end someProcess

--------------------------------------------------------------------------------

(source_file
  (process_declaration
    name: (identifier)
    params: (param_spec
      (constvar_param
        name: (identifier)
        name: (identifier)
        name: (identifier)
        name: (identifier)
        param_type: (primitive_type)))
    end_name: (identifier)))

================================================================================
process declaration - multiple constvar param with shared type optional comma
================================================================================

process someProcess(i, j, : int) end someProcess

--------------------------------------------------------------------------------

(source_file
  (process_declaration
    name: (identifier)
    params: (param_spec
      (constvar_param
        name: (identifier)
        name: (identifier)
        param_type: (primitive_type)))
    end_name: (identifier)))

================================================================================
process declaration - multiple constvar param
================================================================================

process someProcess(i : int, j : int, k : int) end someProcess

--------------------------------------------------------------------------------

(source_file
  (process_declaration
    name: (identifier)
    params: (param_spec
      (constvar_param
        name: (identifier)
        param_type: (primitive_type))
      (constvar_param
        name: (identifier)
        param_type: (primitive_type))
      (constvar_param
        name: (identifier)
        param_type: (primitive_type)))
    end_name: (identifier)))

================================================================================
process declaration - multiple constvar param with optional comma
================================================================================
